--- a/index.html
+++ b/index.html
@@ -1,8 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#236FEB">
+    <meta name="description" content="Tworzę strony internetowe na zamówienie. Strony są wykonywane ręcznie i dopasowane do potrzeb klienta, specjalnie pod jego wymagania. Strona pełni funkcję wizytówki oraz próbkę naszych możliwości technicznych dla potencjalnych klientów, a także zawiera dane kontaktowe.">
+    <meta name="author" content="Paweł Antoni Małecki">
+
+    <meta name="robots" content="index, follow">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="pl_PL">
+    <meta property="og:title" content="stroneczka.pl">
+    <meta property="og:description" content="Tworzę strony internetowe na zamówienie. Strony są wykonywane ręcznie i dopasowane do potrzeb klienta, specjalnie pod jego wymagania. Strona pełni funkcję wizytówki oraz próbkę naszych możliwości technicznych dla potencjalnych klientów, a także zawiera dane kontaktowe.">
+    <meta property="og:image" content="https://example.com/obrazek.png">
+    <meta property="og:url" content="https://stroneczka.pl">
+    <meta property="og:site_name" content="stroneczka.pl">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="icon" type="image/svg+xml" href="/favicon-light.svg" media="(prefers-color-scheme: light)">
+    <link rel="icon" type="image/svg+xml" href="/favicon-dark.svg" media="(prefers-color-scheme: dark)">
+    <link rel="stylesheet" href="style/styles-index.css">
+
     <title>stroneczka.pl</title>
 </head>
 <body>
